# RangeTranslator

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
benchmarks/: ui_overlay.translation_suite.json
docs/architecture/: overlay-runtime-rearchitecture.md
docs/validation/: overlay-phase6-signoff.md
range-translator-runtime/: .env.example  pyproject.toml
range-translator-runtime/prompts/: translation.ui_overlay.default.json
range-translator-runtime/range_translator_runtime/: __main__.py  ai_log.py  application.py  cli.py  runtime_environment.py  runtime_types.py
range-translator-runtime/range_translator_runtime/agents/: agent_factory.py  base_agent.py
range-translator-runtime/range_translator_runtime/agents/translator_agent/: __init__.py  contracts.py  index.py  prompts.py  stream_parser.py  validation.py
range-translator-runtime/range_translator_runtime/app/: __init__.py  context.py  dispatcher.py  runtime_application.py
range-translator-runtime/range_translator_runtime/core/: __init__.py  config.py  environment.py
range-translator-runtime/range_translator_runtime/entrypoints/: cli.py
range-translator-runtime/range_translator_runtime/prompts/: __init__.py  rendering.py  repository.py
range-translator-runtime/range_translator_runtime/providers/: __init__.py
range-translator-runtime/range_translator_runtime/providers/ai/: __init__.py  ai_provider.py  ollama.py  provider_factory.py
range-translator-runtime/range_translator_runtime/providers/ai/geminiflow/: __init__.py  geminiflow_provider.py
range-translator-runtime/range_translator_runtime/providers/ai/ollama/: ollama_provider.py
range-translator-runtime/range_translator_runtime/providers/ai/vertexai/: __init__.py  vertexai_provider.py
range-translator-runtime/range_translator_runtime/providers/logging/: __init__.py  ai_logger_provider.py
range-translator-runtime/range_translator_runtime/providers/ocr/: __init__.py  base.py  paddleocr_provider.py
range-translator-runtime/range_translator_runtime/translation/: __init__.py  contracts.py  orchestrator.py  prompting.py
range-translator-runtime/tests/: test_ollama_provider.py  test_paddleocr_provider.py
scripts/: tauri.mjs
src/: App.tsx  bridge.ts  index.css  languages.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  main.rs  models.rs  ocr.rs  ollama.rs  runtime.rs
src-tauri/src/app/: commands.rs  events.rs  mod.rs  pipeline.rs  windows.rs
src-tauri/src/benchmark/: mod.rs  runner.rs  suite.rs
src-tauri/src/domain/: geometry.rs  mod.rs  overlay_frame.rs  scene.rs  translation.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/providers/ai/: mod.rs  ollama.rs  sidecar_client.rs
src-tauri/src/providers/ocr/: mod.rs  windows_native.rs
src-tauri/src/sidecar/: client.rs  gateway.rs  mod.rs  process.rs  protocol.rs  runtime_process.rs  transport.rs
src-tauri/src/state/: mod.rs  shared.rs
src/app/: constants.ts  debug.ts  overlay-geometry.ts  overlay-style.ts  (+7 more)
(+13 files in other folders)
