[project]
name = "range-translator-runtime"
version = "0.1.0"
description = "Persistent sidecar runtime for RangeTranslator OCR and AI providers"
requires-python = ">=3.10"
dependencies = [
	"numpy>=1.26,<3",
	"Pillow>=10,<12",
	"paddlex>=3.5,<3.6",
	"paddleocr>=3.5,<4",
	"google-cloud-aiplatform>=1.40,<2",
	"python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["range_translator_runtime*"]