[package]
name = "range-translator"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
parking_lot = "0.12.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
screenshots = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.2", features = [] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
